# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

verilog_library(
    name = "br_cdc_fifo_ctrl_1r1w_tb",
    srcs = ["br_cdc_fifo_ctrl_1r1w_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_fifo_ctrl_1r1w",
        "//misc/sim:br_test_driver",
        "//ram/rtl:br_ram_flops",
    ],
)

verilog_elab_test(
    name = "br_cdc_fifo_ctrl_1r1w_tb_elab_test",
    tool = "slang",
    top = "br_cdc_fifo_ctrl_1r1w_tb",
    deps = [
        ":br_cdc_fifo_ctrl_1r1w_tb",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_ctrl_1r1w_sim_test_tools_suite" + cdc_delay_mode,
        params = {
            "Depth": [
                "4",
                "13",
            ],
            "Width": ["8"],
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "RamAddressDepthStages": [
                "0",
                "1",
            ],
            "NumSyncStages": [
                "2",
                "3",
            ],
            "PushClockPeriodNs": ["10"],
            "PopClockPeriodNs": ["16"],
            "NumRandomTransactions": ["80"],
            "RandomPushIdleMax": ["3"],
            "RandomPopIdleMax": ["4"],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        tags = ["no-sandbox"],
        tools = [
            "vcs",
            "verilator",
        ],
        top = "br_cdc_fifo_ctrl_1r1w_tb",
        deps = [
            ":br_cdc_fifo_ctrl_1r1w_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_ctrl_1r1w_random_clock_period_sim_test_tools_suite" + cdc_delay_mode,
        params = {
            "Depth": ["13"],
            "NumRandomTransactions": ["48"],
            "NumSyncStages": ["3"],
            "RamAddressDepthStages": ["1"],
            "RandomPopIdleMax": ["4"],
            "RandomPushIdleMax": ["3"],
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "Width": ["8"],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
            "+clock_period_select=-1",
        ],
        tags = ["no-sandbox"],
        tools = [
            "vcs",
            "verilator",
        ],
        top = "br_cdc_fifo_ctrl_1r1w_tb",
        deps = [
            ":br_cdc_fifo_ctrl_1r1w_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_ctrl_1r1w_extreme_clock_ratio_sim_test_tools_suite" + cdc_delay_mode + "_" + clock_ratio["name"],
        params = {
            "Depth": ["13"],
            "NumRandomTransactions": ["48"],
            "NumSyncStages": ["3"],
            "PopClockPeriodNs": [clock_ratio["pop_clock_period_ns"]],
            "PushClockPeriodNs": [clock_ratio["push_clock_period_ns"]],
            "RamAddressDepthStages": ["1"],
            "RandomPopIdleMax": ["4"],
            "RandomPushIdleMax": ["3"],
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "Width": ["8"],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        tags = ["no-sandbox"],
        tools = [
            "vcs",
            "verilator",
        ],
        top = "br_cdc_fifo_ctrl_1r1w_tb",
        deps = [
            ":br_cdc_fifo_ctrl_1r1w_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
    for clock_ratio in [
        {
            "name": "slow_pop",
            "pop_clock_period_ns": "101",
            "push_clock_period_ns": "7",
        },
        {
            "name": "slow_push",
            "pop_clock_period_ns": "7",
            "push_clock_period_ns": "101",
        },
    ]
]

verilog_library(
    name = "br_cdc_fifo_flops_tb",
    srcs = ["br_cdc_fifo_flops_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_fifo_flops",
        "//fifo/sim:br_fifo_test_harness",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_cdc_fifo_flops_tb_elab_test",
    tool = "slang",
    top = "br_cdc_fifo_flops_tb",
    deps = [
        ":br_cdc_fifo_flops_tb",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_flops_sim_test_tools_suite" + cdc_delay_mode,
        params = {
            "Depth": [
                # Minimum depth needed for full bandwidth at the maximum cut-through and backpressure latencies
                "15",
            ],
            "Width": ["8"],
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "FlopRamAddressDepthStages": [
                "0",
                "1",
            ],
            "EnableStructuredGatesDataQualification": [
                "0",
                "1",
            ],
            "NumSyncStages": [
                "2",
                "3",
            ],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        tags = ["no-sandbox"],
        # TODO(mgottscho): Enable Verilator once it supports
        # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
        # delay modeling.
        tools = [
            "vcs",
            #"verilator",
        ],
        top = "br_cdc_fifo_flops_tb",
        deps = [
            ":br_cdc_fifo_flops_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

verilog_library(
    name = "br_cdc_fifo_ctrl_1r1w_push_credit_tb",
    srcs = ["br_cdc_fifo_ctrl_1r1w_push_credit_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_fifo_ctrl_1r1w_push_credit",
        "//credit/rtl:br_credit_sender",
        "//delay/rtl:br_delay_nr",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
        "//ram/rtl:br_ram_flops",
    ],
)

verilog_elab_test(
    name = "br_cdc_fifo_ctrl_1r1w_push_credit_tb_elab_test",
    tool = "slang",
    top = "br_cdc_fifo_ctrl_1r1w_push_credit_tb",
    deps = [
        ":br_cdc_fifo_ctrl_1r1w_push_credit_tb",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_ctrl_1r1w_push_credit_sim_test_tools_suite_cdc" +
               cdc_delay_mode + "_" + clock_period_name,
        params = {
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "RamAddressDepthStages": [
                "0",
                "1",
            ],
            "EnableStructuredGatesDataQualification": [
                "0",
                "1",
            ],
            "NumSyncStages": [
                "2",
                "3",
            ],
            "RegisterPushOutputs": [
                "0",
                "1",
            ],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
            "+push_clock_period_ns=" + push_clock_period_ns,
            "+pop_clock_period_ns=" + pop_clock_period_ns,
        ],
        tools = [
            "vcs",
            "verilator",
        ],
        top = "br_cdc_fifo_ctrl_1r1w_push_credit_tb",
        deps = [
            ":br_cdc_fifo_ctrl_1r1w_push_credit_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
    for (clock_period_name, push_clock_period_ns, pop_clock_period_ns) in [
        ("0", "10", "16"),
        ("1", "-1", "-1"),  # Randomize both clock periods.
        ("2", "7", "101"),
        ("3", "101", "7"),
        ("4", "10", "10"),
        ("5", "10", "11"),
        ("6", "11", "10"),
        ("7", "100", "101"),
        ("8", "101", "100"),
    ]
]

verilog_library(
    name = "br_cdc_fifo_flops_push_credit_tb",
    srcs = ["br_cdc_fifo_flops_push_credit_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_fifo_flops_push_credit",
        "//credit/rtl:br_credit_sender",
        "//fifo/sim:br_fifo_test_harness",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_cdc_fifo_flops_push_credit_tb_elab_test",
    tool = "slang",
    top = "br_cdc_fifo_flops_push_credit_tb",
    deps = [
        ":br_cdc_fifo_flops_push_credit_tb",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_fifo_flops_push_credit_sim_test_tools_suite" + cdc_delay_mode,
        params = {
            "RegisterPopOutputs": [
                "0",
                "1",
            ],
            "FlopRamAddressDepthStages": [
                "0",
                "1",
            ],
            "EnableStructuredGatesDataQualification": [
                "0",
                "1",
            ],
            "NumSyncStages": [
                "2",
                "3",
            ],
            "RegisterPushOutputs": [
                "0",
                "1",
            ],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        # TODO(mgottscho): Enable Verilator once it supports
        # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
        # delay modeling.
        tools = [
            "vcs",
            #"verilator",
        ],
        top = "br_cdc_fifo_flops_push_credit_tb",
        deps = [
            ":br_cdc_fifo_flops_push_credit_tb",
            "//gate/rtl:br_gate_mock",
            "//mux/rtl:br_mux_bin_structured_gates_mock",
        ],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

verilog_library(
    name = "br_cdc_bit_toggle_tb",
    srcs = ["br_cdc_bit_toggle_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_bit_toggle",
        "//gate/rtl:br_gate_mock",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_cdc_bit_toggle_tb_elab_test",
    tool = "slang",
    top = "br_cdc_bit_toggle_tb",
    deps = [
        ":br_cdc_bit_toggle_tb",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_bit_toggle_sim_test_tools_suite_" + cdc_delay_mode,
        params = {
            "NumStages": [
                "1",
                "3",
            ],
            "AddSourceFlop": [
                "0",
                "1",
            ],
            "SrcClkPeriod": [
                "5",
                "20",
            ],
            "DstClkPeriod": [
                "10",
                "30",
            ],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        tags = ["no-sandbox"],
        tools = [
            "vcs",
            "verilator",
        ],
        deps = [":br_cdc_bit_toggle_tb"],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

verilog_library(
    name = "br_cdc_bit_pulse_tb",
    srcs = ["br_cdc_bit_pulse_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_bit_pulse",
        "//gate/rtl:br_gate_mock",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_cdc_bit_pulse_tb_elab_test",
    tool = "slang",
    top = "br_cdc_bit_pulse_tb",
    deps = [
        ":br_cdc_bit_pulse_tb",
    ],
)

[
    br_verilog_sim_test_tools_suite(
        name = "br_cdc_bit_pulse_sim_test_tools_suite_" + cdc_delay_mode,
        params = {
            "NumStages": [
                "2",
                "3",
            ],
            "RegisterOutput": [
                "0",
                "1",
            ],
            "SrcClkPeriod": [
                "5",
                "20",
            ],
            "DstClkPeriod": [
                "10",
                "30",
            ],
        },
        sim_opts = [
            "+cdc_delay_mode=" + cdc_delay_mode,
        ],
        tags = ["no-sandbox"],
        # TODO(mgottscho): Enable Verilator once it supports
        # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
        # delay modeling.
        tools = [
            "vcs",
            #"verilator",
        ],
        deps = [":br_cdc_bit_pulse_tb"],
    )
    for cdc_delay_mode in [
        "0",
        "1",
        "2",
        "3",
    ]
]

verilog_library(
    name = "br_cdc_reg_tb",
    srcs = ["br_cdc_reg_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_reg",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_cdc_reg_tb_elab_test",
    tool = "slang",
    top = "br_cdc_reg_tb",
    deps = [
        ":br_cdc_reg_tb",
        "//gate/rtl:br_gate_mock",
    ],
)

br_verilog_sim_test_tools_suite(
    name = "br_cdc_reg_sim_test_tools_suite",
    params = {
        "Width": ["8"],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
        "RegisterResetActive": [
            "0",
            "1",
        ],
        "PushClockPeriodNs": [
            "10",
            "16",
            "20",
        ],
        "PopClockPeriodNs": [
            "10",
            "16",
            "20",
        ],
    },
    # TODO(mgottscho): Enable Verilator once it supports
    # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
    # delay modeling.
    tools = [
        "vcs",
        #"verilator",
    ],
    top = "br_cdc_reg_tb",
    deps = [
        ":br_cdc_reg_tb",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_stable_data_tb",
    srcs = ["br_cdc_stable_data_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_stable_data",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_cdc_stable_data_tb_elab_test",
    tool = "slang",
    top = "br_cdc_stable_data_tb",
    deps = [
        ":br_cdc_stable_data_tb",
        "//gate/rtl:br_gate_mock",
    ],
)

br_verilog_sim_test_tools_suite(
    name = "br_cdc_stable_data_sim_test_tools_suite",
    params = {
        "Width": ["8"],
        "InitValue": [
            "0",
            "1",
        ],
        "RegisterResetActive": [
            "0",
            "1",
        ],
        "NumSyncStages": [
            "2",
            "3",
        ],
        "SrcClkPeriodNs": [
            "10",
            "16",
        ],
        "DstClkPeriodNs": [
            "10",
            "16",
        ],
    },
    # TODO(mgottscho): Enable Verilator once it supports
    # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
    # delay modeling.
    tools = [
        "vcs",
        #"verilator",
    ],
    top = "br_cdc_stable_data_tb",
    deps = [
        ":br_cdc_stable_data_tb",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_stable_data_autoupdate_tb",
    srcs = ["br_cdc_stable_data_autoupdate_tb.sv"],
    deps = [
        "//cdc/rtl:br_cdc_stable_data_autoupdate",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_cdc_stable_data_autoupdate_tb_elab_test",
    tool = "slang",
    top = "br_cdc_stable_data_autoupdate_tb",
    deps = [
        ":br_cdc_stable_data_autoupdate_tb",
        "//gate/rtl:br_gate_mock",
    ],
)

br_verilog_sim_test_tools_suite(
    name = "br_cdc_stable_data_autoupdate_sim_test_tools_suite",
    params = {
        "Width": ["8"],
        "InitValue": [
            "0",
            "1",
        ],
        "RegisterResetActive": [
            "0",
            "1",
        ],
        "NumSyncStages": [
            "2",
            "3",
        ],
        "SrcClkPeriodNs": [
            "10",
            "16",
        ],
        "DstClkPeriodNs": [
            "10",
            "16",
        ],
    },
    # TODO(mgottscho): Enable Verilator once it supports
    # `process::self().srandom(new_seed)` in `br_cdc_bit_toggle` during CDC
    # delay modeling.
    tools = [
        "vcs",
        #"verilator",
    ],
    top = "br_cdc_stable_data_autoupdate_tb",
    deps = [
        ":br_cdc_stable_data_autoupdate_tb",
        "//gate/rtl:br_gate_mock",
    ],
)
