# Copyright 2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_clock_throttle",
    srcs = ["br_clock_throttle.sv"],
    deps = [
        "//counter/rtl:br_counter_incr",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_clock_throttle_test_suite",
    params = {
        "CntrWidth": [
            "2",
            "5",
        ],
        "SyncTrigger": [
            "0",
            "1",
        ],
    },
    top = "br_clock_throttle",
    deps = [
        ":br_clock_throttle",
        "//gate/rtl:br_gate_mock",
    ],
)
