# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_fpv_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

##################################################################
# Bedrock-RTL Increment/Decrement Counter w/ Overflow Handling

verilog_library(
    name = "br_counter_fpv_monitor",
    srcs = ["br_counter_fpv_monitor.sv"],
    deps = [
        "//counter/rtl:br_counter",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_counter_fpv_monitor_elab_test",
    tool = "verific",
    deps = [":br_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_test_suite",
    illegal_param_combinations = {
        (
            "MaxChange",
            "MaxValue",
        ): [
            ("3", "1"),
            ("4", "1"),
        ],
        (
            "EnableSaturate",
            "EnableWrap",
        ): [
            ("1", "1"),
        ],
    },
    params = {
        "EnableReinitAndChange": [
            "0",
            "1",
        ],
        "EnableSaturate": [
            "0",
            "1",
        ],
        "EnableWrap": [
            "0",
            "1",
        ],
        "MaxChange": [
            "1",
            "3",
            "4",
        ],
        "MaxValue": [
            "1",
            "5",
            "8",
        ],
    },
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter",
    deps = [":br_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_test_max",
    elab_opts = [
        "-parameter MaxChange 4294967295",
        "-parameter MaxValue 4294967295",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter",
    deps = [":br_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_test_max_override",
    elab_opts = [
        "-parameter MaxValueWidth 64",
        "-parameter MaxChangeWidth 64",
        "-parameter MaxChange 18446744073709551615",
        "-parameter MaxValue 18446744073709551615",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter",
    deps = [":br_counter_fpv_monitor"],
)

##################################################################
# Bedrock-RTL Decrementing Counter
verilog_library(
    name = "br_counter_decr_fpv_monitor",
    srcs = ["br_counter_decr_fpv_monitor.sv"],
    deps = [
        "//counter/rtl:br_counter_decr",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_counter_decr_fpv_monitor_elab_test",
    tool = "verific",
    deps = [":br_counter_decr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_decr_test_suite",
    illegal_param_combinations = {
        (
            "MaxDecrement",
            "MaxValue",
        ): [
            ("3", "1"),
            ("4", "1"),
        ],
    },
    params = {
        "EnableReinitAndDecr": [
            "0",
            "1",
        ],
        "EnableSaturate": [
            "0",
            "1",
        ],
        "MaxDecrement": [
            "1",
            "3",
            "4",
        ],
        "MaxValue": [
            "1",
            "5",
            "7",
        ],
    },
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_decr",
    deps = [":br_counter_decr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_decr_test_max",
    elab_opts = [
        "-parameter MaxDecrement 4294967295",
        "-parameter MaxValue 4294967295",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_decr",
    deps = [":br_counter_decr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_decr_test_max_override",
    elab_opts = [
        "-parameter MaxValueWidth 64",
        "-parameter MaxDecrementWidth 64",
        "-parameter MaxDecrement 18446744073709551615",
        "-parameter MaxValue 18446744073709551615",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_decr",
    deps = [":br_counter_decr_fpv_monitor"],
)

##################################################################
# Bedrock-RTL Incrementing Counter
verilog_library(
    name = "br_counter_incr_fpv_monitor",
    srcs = ["br_counter_incr_fpv_monitor.sv"],
    deps = [
        "//counter/rtl:br_counter_incr",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_counter_incr_fpv_monitor_elab_test",
    tool = "verific",
    deps = [":br_counter_incr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_incr_test_suite",
    illegal_param_combinations = {
        (
            "MaxIncrement",
            "MaxValue",
        ): [
            ("3", "1"),
            ("4", "1"),
        ],
    },
    params = {
        "EnableReinitAndIncr": [
            "0",
            "1",
        ],
        "EnableSaturate": [
            "0",
            "1",
        ],
        "MaxIncrement": [
            "1",
            "3",
            "4",
        ],
        "MaxValue": [
            "1",
            "5",
            "7",
        ],
    },
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_incr",
    deps = [":br_counter_incr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_incr_test_max",
    elab_opts = [
        "-parameter MaxIncrement 4294967295",
        "-parameter MaxValue 4294967295",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_incr",
    deps = [":br_counter_incr_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_counter_incr_test_max_override",
    elab_opts = [
        "-parameter MaxValueWidth 64",
        "-parameter MaxIncrementWidth 64",
        "-parameter MaxIncrement 18446744073709551615",
        "-parameter MaxValue 18446744073709551615",
    ],
    tools = {
        "jg": "br_counter_fpv.jg.tcl",
    },
    top = "br_counter_incr",
    deps = [":br_counter_incr_fpv_monitor"],
)
