# Copyright 2024 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:verilog.bzl", "verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_counter_incr",
    srcs = ["br_counter_incr.sv"],
    deps = [
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_library(
    name = "br_counter_decr",
    srcs = ["br_counter_decr.sv"],
    deps = [
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

verilog_elab_and_lint_test_suite(
    name = "br_counter_incr_test_suite",
    params = {
        "MaxValue": [
            "1",
            "2",
            "3",
        ],
        "MaxIncrement": [
            "1",
            "2",
        ],
    },
    deps = [":br_counter_incr"],
)

verilog_elab_and_lint_test_suite(
    name = "br_counter_decr_test_suite",
    params = {
        "MaxValue": [
            "1",
            "2",
            "3",
        ],
        "MaxDecrement": [
            "1",
            "2",
        ],
    },
    deps = [":br_counter_decr"],
)
