# Copyright 2024 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_counter_incr_tb",
    srcs = ["br_counter_incr_tb.sv"],
    deps = ["//counter/rtl:br_counter_incr"],
)

verilog_elab_test(
    name = "br_counter_incr_tb_elab_test",
    deps = [":br_counter_incr_tb"],
)

br_verilog_sim_test_suite(
    name = "br_counter_incr_vcs_test_suite",
    tool = "vcs",
    deps = [":br_counter_incr_tb"],
)

verilog_library(
    name = "br_counter_tb",
    srcs = ["br_counter_tb.sv"],
    deps = [
        "//counter/rtl:br_counter",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_counter_tb_elab_test",
    deps = [":br_counter_tb"],
)

br_verilog_sim_test_suite(
    name = "br_counter_vcs_test_suite",
    tool = "vcs",
    deps = [":br_counter_tb"],
)
